TFP-5554: Småfiks